app/styles/main.scss
@import '_base.scss';

/**
 * Variables
 */
$navbar-width: 960px;
$navbar-height: 60px;
$navbar-link-color: black;

@mixin sans-serif {
	font-family: Helvetica Neue, sans-serif;
}

body {
	@include sans-serif;
	padding-top: $navbar-height;
}

.nav-bar {
	background-color:  #333;
	position:          fixed;
	top:               0;
	left:              0;
	right:             0;
	position:          fixed;

	h2 {
		color: white;
		font-weight: 200;
		line-height: $navbar-height;
		margin: 0;
	}
}

table.board {
	width: 400px;
	height: 400px;
	margin: 0 auto;
	margin-bottom: 30px;

	td {
		vertical-align: middle;
		text-align: center;
		font-size: 48px;
		border: 1px solid #888;

		&.highlighted {
			background-color: green;
		}
	}
}

@media only screen and (max-width: 767px) {
	table.board {
		height: 300px;
		width: 300px;
	}
}

@media only screen and (min-width: 480px) and (max-width: 767px) {
	table.board {
		height: 420px;
		width: 420px;
	}
}

